--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "immer": "^9.0.12",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "zustand": "^3.7.2"
